--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(tests
-    dummy.cpp
+    basic.cpp
 )
+target_compile_features(tests PRIVATE cxx_std_20)
 
 target_include_directories(tests SYSTEM
     PRIVATE
