--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,7 @@ add_executable(tests
     basic.cpp
 )
 target_compile_features(tests PRIVATE cxx_std_20)
+target_compile_options(tests PRIVATE --coverage)
 
 target_include_directories(tests SYSTEM
     PRIVATE
@@ -12,4 +13,4 @@ target_include_directories(tests
         .
         ../include
 )
-target_link_libraries(tests PRIVATE Catch2::Catch2WithMain)
+target_link_libraries(tests PRIVATE Catch2::Catch2WithMain gcov)
