Hide FilesystemWatcher's platform-specific guts

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,12 @@
+add_library(indexer SHARED inotify_filesystem_watcher.cpp)
+target_compile_features(indexer PRIVATE cxx_std_20)
+target_include_directories(indexer
+    PRIVATE
+        .
+        ../include
+)
+target_link_libraries(indexer pthread)
+
 add_executable(repl repl.cpp)
 target_compile_features(repl PRIVATE cxx_std_20)
 target_include_directories(repl
@@ -5,4 +14,4 @@ target_include_directories(repl
         .
         ../include
 )
-target_link_libraries(repl pthread)
+target_link_libraries(repl indexer pthread)
