Clean up CMakeLists

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,7 +8,12 @@ target_include_directories(indexer
         .
         ../include
 )
-target_link_libraries(indexer pthread)
+target_link_libraries(indexer PUBLIC pthread)
+
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    target_compile_options(indexer PRIVATE --coverage)
+    target_link_libraries(indexer PRIVATE gcov)
+endif()
 
 add_executable(repl repl.cpp)
 target_compile_features(repl PRIVATE cxx_std_20)
@@ -17,4 +22,4 @@ target_include_directories(repl
         .
         ../include
 )
-target_link_libraries(repl indexer pthread)
+target_link_libraries(repl indexer)
