--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,11 +24,19 @@ if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
         "Debug" "Profile" "Release")
 endif()
 
-add_compile_options(
-        -Wall -Wextra -Wshadow -Wnon-virtual-dtor -Wold-style-cast -Wcast-align -Wunused
-        -Woverloaded-virtual -Wpedantic -Wconversion -Wsign-conversion
-        -Wmisleading-indentation -Wnull-dereference -Wdouble-promotion -Wformat=2
-        -Wduplicated-cond -Wduplicated-branches -Wlogical-op -Wuseless-cast)
+if(MSVC)
+    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS TRUE)
+    set(BUILD_SHARED_LIBS TRUE)
+    add_compile_options(
+        /permissive- /W4 /w14242 /w14254 /w14263 /w14265 /w14287 /we4289 /w14296 /w14311
+        /w14545 /w14546 /w14547 /w14549 /w14555 /w14619 /w14640 /w14826 /w14905 /w14906 /w14928)
+else()
+    add_compile_options(
+            -Wall -Wextra -Wshadow -Wnon-virtual-dtor -Wold-style-cast -Wcast-align -Wunused
+            -Woverloaded-virtual -Wpedantic -Wconversion -Wsign-conversion
+            -Wmisleading-indentation -Wnull-dereference -Wdouble-promotion -Wformat=2
+            -Wduplicated-cond -Wduplicated-branches -Wlogical-op -Wuseless-cast)
+endif()
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/lib)
