--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,10 @@
+find_package(Qt5 5.7.0 REQUIRED COMPONENTS Core)
+set(CMAKE_AUTOMOC ON)
+
 add_library(indexer SHARED
     indexer.cpp
+    filesystem_watcher.cpp
+    filesystem_watcher_impl.h
 )
 target_compile_features(indexer PRIVATE cxx_std_20)
 target_include_directories(indexer
@@ -8,10 +13,9 @@ target_include_directories(indexer
         ../include
 )
 
-if(MSVC)
-    set_property(TARGET indexer APPEND PROPERTY SOURCES windows_filesystem_watcher.cpp)
-else()
-    set_property(TARGET indexer APPEND PROPERTY SOURCES inotify_filesystem_watcher.cpp)
+target_link_libraries(indexer PUBLIC Qt5::Core)
+
+if(NOT MSVC)
     target_link_libraries(indexer PUBLIC pthread)
 
     if(CMAKE_BUILD_TYPE STREQUAL "Debug")
